<resources>
    <string name="app_name">My Profile</string>
    <string name="text_name">Имя:</string>
    <string name="text_age">Возраст:</string>
    <string name="text_spes">Специализация:</string>
    <string name="text_project">Проекты</string>
    <string name="text_foto">Фото</string>
    <string name="text_dostij">Достижения</string>
    <string name="text_name1">Имя: Анастасия</string>
    <string name="text_age1">Возраст: 17</string>
    <string name="text_spec1">Специализация: Программист</string>
</resources>