<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#673AB7" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:src="@drawable/img4" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#9C27B0"
            android:text="@string/text_foto"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#673AB7"
            android:text="@string/text_project"

            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#673AB7"
            android:text="@string/text_dostij"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name1"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_age1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_spec1"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="417dp"
        android:layout_height="392dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.142">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/img1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/img2" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img3" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img5" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/img6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img7" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img8" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img9" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img10" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>